--- a/Dockerfile_Manuel
+++ b/Dockerfile_Manuel
@@ -12,5 +12,7 @@ RUN rm -f /lib/systemd/system/multi-user.target.wants/*;\
 
 RUN dnf install -y mysql-server
 
+COPY script.sh /usr/local/sbin
+
 VOLUME [ "/sys/fs/cgroup" ]
 CMD ["/usr/sbin/init"]
