--- a/Dockerfile_Manuel
+++ b/Dockerfile_Manuel
@@ -26,7 +26,7 @@ RUN dnf install -y mysql-server
 # Configuration de MySQL
 RUN echo -e '[mysqld]\nsql-mode="NO_ENGINE_SUBSTITUTION"' > /etc/my.cnf.d/tuleap.cnf
 
-RUN curl -LJO https://raw.github.com/bpeytraud/docker_tracker/blob/main/script.sh
+RUN curl -LJO https://raw.githubusercontent.com/bpeytraud/docker_tracker/main/script.sh
 RUN mv script.sh /usr/local/sbin/
 RUN chmod +x /usr/local/sbin/script.sh
 
