--- a/Dockerfile_Manuel
+++ b/Dockerfile_Manuel
@@ -14,13 +14,9 @@ RUN rm -f /lib/systemd/system/multi-user.target.wants/*;\
 RUN dnf install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm
 RUN dnf install -y https://rpms.remirepo.net/enterprise/remi-release-9.rpm
 RUN dnf install -y https://ci.tuleap.net/yum/tuleap/rhel/9/dev/x86_64/tuleap-community-release.rpm
-RUN dnf install -y \
-        mysql-server
 
-# Configuration de MySQL
-RUN echo -e '[mysqld]\nsql-mode="NO_ENGINE_SUBSTITUTION"' > /etc/my.cnf.d/tuleap.cnf
-
-COPY --chmod=750 script.sh /usr/local/sbin/script.sh
+COPY script.sh /usr/local/sbin
+RUN chmod +x /usr/local/sbin/script.sh
 
 VOLUME [ "/sys/fs/cgroup" ]
 CMD ["/usr/sbin/init"]
